Code: Refactor registration and login components, add error handling, and update routing

--- a/parrainage-backOffice/src/app/components/login/login.component.css
+++ b/parrainage-backOffice/src/app/components/login/login.component.css
@@ -13,3 +13,11 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+h2 {
+  text-align: center;
+}
+a{
+  text-align: center;
+  color: #007bff;
+  cursor: pointer;
+}
