--- a/parrainage-backOffice/src/app/components/login/login.component.html
+++ b/parrainage-backOffice/src/app/components/login/login.component.html
@@ -1,8 +1,9 @@
 <h2>🔑 Connexion</h2>
 <form (submit)="login()">
-  <input type="email" [(ngModel)]="email" placeholder="Email" required>
-  <input type="password" [(ngModel)]="password" placeholder="Mot de passe" required>
+  <input type="email" [(ngModel)]="user.email" name="email" placeholder="Email" required>
+  <input type="password" [(ngModel)]="user.password" name="password" placeholder="Mot de passe" required>
   <button type="submit">Se connecter</button>
-  <a routerLink="/register">Créer un compte</a>
 </form>
+<p *ngIf="errorMessage" style="color: red;">{{ errorMessage }}</p>
+<a routerLink="/register">Créer un compte</a>
 
