--- a/parrainage-backOffice/src/app/components/register/register.component.html
+++ b/parrainage-backOffice/src/app/components/register/register.component.html
@@ -1,9 +1,9 @@
 <h2>📝 Inscription</h2>
 <form (ngSubmit)="register()">
-  <input type="text" [(ngModel)]="users.name" name="name" placeholder="Nom" required>
-  <input type="text" [(ngModel)]="users.Prenom" name="Prenom" placeholder="Prénom" required>
-  <input type="email" [(ngModel)]="users.email" name="email" placeholder="Email" required>
-  <input type="password" [(ngModel)]="users.password" name="password" placeholder="Mot de passe" required>
+  <input type="text" [(ngModel)]="user.name" name="name" placeholder="Nom" required>
+  <input type="text" [(ngModel)]="user.prenom" name="prenom" placeholder="Prénom" required>
+  <input type="email" [(ngModel)]="user.email" name="email" placeholder="Email" required>
+  <input type="password" [(ngModel)]="user.password" name="password" placeholder="Mot de passe" required>
   <button type="submit">S'inscrire</button>
 </form>
 <p *ngIf="errorMessage" style="color: red;">{{ errorMessage }}</p>
