--- a/parrainage-backOffice/src/app/app.component.css
+++ b/parrainage-backOffice/src/app/app.component.css
@@ -21,6 +21,7 @@ body {
   padding: 5px 10px;
   border-radius: 5px;
   transition: background-color 0.3s;
+  cursor: pointer;
 }
 
 .navbar a:hover {
@@ -53,5 +54,6 @@ body {
     width: 100%;
     text-align: left;
     margin: 5px 0;
+
   }
 }
